ags (0.7.54)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing addition of overclock value of soundcard in ags_simple_file.c
	* fixed wrong sequencer duration calculated by wrong delay now it gets it of AgsSoundcard
	* implemented character ring-buffer in ags_devout.c

ags (0.7.53)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed readjust delay as modify buffer size or samplerate of soundcard
	* fixed tempo divide delay by 16.0 and corrected bpm calculation
	* implemented ags_soundcard_get_uptime()
	* implemented ags_cell_pattern_led_queue_draw_timeout() and ags_pattern_box_led_queue_draw_timeout()

ags (0.7.52)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed resetting buffer size and samplerate because threads might not have been added to the tree, yet
	* implemented midi mapping of DSSI and Lv2 synths

ags (0.7.51)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed freed overwritten temporary string in ags_set_output_device.c
	* fixed reset frequency of main loop in ags_apply_presets.c

ags (0.7.50)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_polling_thread.[ch] and ags_poll_fd.[ch]
	* implemented ags_soundcard_get_poll_fd() and ags_soundcard_is_avialable()
	* using AgsPollingThread in ags_soundcard_thread.c and ags_gui_thread.c
	* fixed use of freed string in ags_audio_preferences.c as apply soundcard
	* improved priorities

ags (0.7.49)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed data-race of resetting soundcard device and apply presets
	* improved API reference manual
	* deleted ags_perform_automation_audio.[ch] and ags_perform_automation_audio_run.[ch] because it is not needed, see AgsRecall::automate

ags (0.7.48)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed restart soundcard playback as doing ags_apply_presets_launch()
	* implemented AgsNote in AgsAudioSignal