@@ -754,6 +754,9 @@ ags_pattern_box_led_queue_draw_timeout(AgsPatternBox *pattern_box)
       
       return(TRUE);
     }
+
+    play_count_beats_audio = NULL;
+    play_count_beats_audio_run = NULL;
     
     list = ags_recall_find_type(audio->play,
 				AGS_TYPE_COUNT_BEATS_AUDIO);
