@@ -3,7 +3,14 @@ ags (0.7.54)
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* fixed missing addition of overclock value of soundcard in ags_simple_file.c
 	* fixed wrong sequencer duration calculated by wrong delay now it gets it of AgsSoundcard
+	* fixed use of uninitialized value in ags_cell_pattern.c and ags_pattern_box.c
+	* fixed persist virtual audio and midi mapping
+	* fixed reset buffer-size and samplerate of AgsAudio as setting AgsSoundcard
+	* fixed default frequency of AgsAudioThread and AgsChannelThread
 	* implemented character ring-buffer in ags_devout.c
+	* implemented to interrupt AgsLv2Worker thread
+	* implemented time_late field of AgsThread and thereby reduced distortion
+	* updated ags_simple_file.dtd in order to enable midi mapping
 
 ags (0.7.53)
 
